[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Set0.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/PopUpAddSet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/font medium.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 0.054902, 0.0588235, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0980392, 0.105882, 0.121569, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Canvas" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplit" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoLaPanel" type="Panel" parent="HSplit"]
visible = false
margin_right = 320.0
margin_bottom = 1080.0
rect_min_size = Vector2( 320, 1080 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoLaInput" type="TextEdit" parent="HSplit/CoLaPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 50.0
margin_right = -8.0
margin_bottom = -8.0
rect_min_size = Vector2( 288, 1024 )
custom_colors/background_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
syntax_highlighting = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanel" type="Panel" parent="HSplit"]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1024, 600 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetUniverse" type="Button" parent="HSplit/MainPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -378.917
margin_top = 220.0
margin_right = -225.917
margin_bottom = 270.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
enabled_focus_mode = 0
text = "Set Universe"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddVariables" type="Button" parent="HSplit/MainPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 228.429
margin_top = 220.0
margin_right = 391.429
margin_bottom = 270.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
enabled_focus_mode = 0
text = "Add Variables"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenCoLa" type="Button" parent="HSplit/MainPanel"]
margin_right = 27.0
margin_bottom = 48.0
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
enabled_focus_mode = 0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sets" type="Control" parent="HSplit/MainPanel"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N" parent="HSplit/MainPanel/Sets" instance=ExtResource( 2 )]

[node name="X" parent="HSplit/MainPanel/Sets" instance=ExtResource( 2 )]

[node name="PopUpUniverse" parent="." instance=ExtResource( 3 )]
popup_exclusive = true
[connection signal="button_up" from="HSplit/MainPanel/SetUniverse" to="." method="popup_universe" binds= [ "N" ]]
[connection signal="button_up" from="HSplit/MainPanel/AddVariables" to="." method="popup_universe" binds= [ "X" ]]
[connection signal="button_up" from="HSplit/MainPanel/OpenCoLa" to="." method="toggle_cola_panel"]
